update regex editor

--- a/regular expression/regular expression 정리본.ipynb
+++ b/regular expression/regular expression 정리본.ipynb
@@ -2,7 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "97b6ac4d",
+   "id": "516a425e",
+   "metadata": {},
+   "source": [
+    "### [regex101](https://regex101.com/)\n",
+    "동작 설명이 잘되어 있음."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc0b3c56",
    "metadata": {},
    "source": [
     "###  [Pythex: a Python regular expression editor](https://pythex.org/) \n",
@@ -11,24 +20,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2566fc7a",
+   "id": "fd3100ad",
    "metadata": {},
    "source": [
     "### [PyRegex: Your Python Regular Expression's Best Buddy](http://www.pyregex.com/)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "1b49fcd2",
-   "metadata": {},
-   "source": [
-    "### [regex101](https://regex101.com/)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "3a70434f",
+   "id": "da608d8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ade63af4",
+   "id": "416642a9",
    "metadata": {},
    "source": [
     "#### metacharacter : \n",
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b88d50b6",
+   "id": "288575ec",
    "metadata": {},
    "source": [
     "[ ] 안에서는 특수 문자 역할을 하지 못함"
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e66f0269",
+   "id": "018af072",
    "metadata": {},
    "source": [
     "[^5] -> will match any character except '5'. [5^] will match either a '5' or a '^'."
@@ -63,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "296502e7",
+   "id": "cd2e93b8",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8e8f4049",
+   "id": "5f4f0558",
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5fef5e75",
+   "id": "418b4f47",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9e6e08a1",
+   "id": "f08cc3f5",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06b5c764",
+   "id": "e978e94b",
    "metadata": {},
    "source": [
     "\\d is equivalent to the class [0-9].\n",
@@ -169,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83428c06",
+   "id": "5e5bf201",
    "metadata": {},
    "source": [
     "[\\s,.] is a character class that will match any whitespace character, or ',' or '.'."
@@ -178,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ab6904a1",
+   "id": "88a9149b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94e25c3c",
+   "id": "784312eb",
    "metadata": {},
    "source": [
     "### Python’s raw string notation for regular expressions\n",
@@ -198,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "368dddc9",
+   "id": "2ec4a610",
    "metadata": {},
    "source": [
     "### Performing Matches"
@@ -206,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13f74845",
+   "id": "c85710c5",
    "metadata": {},
    "source": [
     "<table border=\"1\">\n",
@@ -236,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "179d741b",
+   "id": "a477de64",
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "8c0904c0",
+   "id": "24ca9beb",
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aebb4e49",
+   "id": "173cfb01",
    "metadata": {},
    "source": [
     "<table border=\"1\">\n",
@@ -304,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "95c24bec",
+   "id": "ad226c3f",
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "2c3b301e",
+   "id": "b7dae564",
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "85553446",
+   "id": "30607300",
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "3e02a87a",
+   "id": "62bfd2d3",
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "b84bc647",
+   "id": "73327758",
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "acfdd54e",
+   "id": "1e72d030",
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "04898bd7",
+   "id": "c3ddc54b",
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "31e27ef5",
+   "id": "d1472d61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "60eb79f2",
+   "id": "c14a23e2",
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "c7ad4d2e",
+   "id": "63749a23",
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "b0429e69",
+   "id": "6db25c88",
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd4821cc",
+   "id": "7af58034",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de4018b4",
+   "id": "e620b9d0",
    "metadata": {},
    "source": [
     "| : Alternation, or the “or” operator. <br>\n",
@@ -552,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "7b964c34",
+   "id": "2aca3f6f",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "4960bd16",
+   "id": "a4c6000e",
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +588,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e3d80aa",
+   "id": "d4ba1fb8",
    "metadata": {},
    "source": [
     "$ : Matches at the end of a line"
@@ -596,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "e3e81264",
+   "id": "6eb5a7be",
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "dd3f500d",
+   "id": "fd2953b6",
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "32901960",
+   "id": "defeef58",
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3244329e",
+   "id": "3feaa0a1",
    "metadata": {},
    "source": [
     "\\A : Matches only at the start of the string. When not in MULTILINE mode, <span style='color:red'> \\A and ^ are effectively the same. In MULTILINE mode, they’re different</span>: \\A still matches only at the beginning of the string, but ^ may match at any location inside the string that follows a newline character."
@@ -657,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "472f9e29",
+   "id": "4cd69277",
    "metadata": {},
    "source": [
     "\\b : Word boundary. This is a zero-width assertion that matches only at the beginning or end of a word."
@@ -666,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "11204352",
+   "id": "c509ec06",
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "aa1f469f",
+   "id": "a0ba4fa4",
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "7898328b",
+   "id": "4661757c",
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +721,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "741346a8",
+   "id": "6afa875c",
    "metadata": {},
    "source": [
     "### Grouping\n",
@@ -730,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "6876fc48",
+   "id": "e76d2379",
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +754,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "4cd160b0",
+   "id": "596440d8",
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "f39bca9a",
+   "id": "b305a217",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "93ade596",
+   "id": "7769539d",
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "947a28e7",
+   "id": "6f8443fd",
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "729e7c49",
+   "id": "9465a509",
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "6e26ce33",
+   "id": "8b044552",
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "e378a66f",
+   "id": "8ef427ec",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "ce825faf",
+   "id": "caa36336",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -902,7 +903,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "5656b437",
+   "id": "faab9441",
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +923,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98441486",
+   "id": "8ce37fa4",
    "metadata": {},
    "source": [
     "The syntax for a named group is one of the Python-specific extensions: (?P<name>...). name is, obviously, the name of the group."
@@ -931,7 +932,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "67dc4396",
+   "id": "dc9b43fd",
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "557b2f5d",
+   "id": "5414e890",
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +976,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "3200a37e",
+   "id": "45165378",
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +998,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "99a7c573",
+   "id": "44f580cd",
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1018,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7e8d92c",
+   "id": "b176bbfa",
    "metadata": {},
    "source": [
     "### Modifying Strings"
@@ -1026,7 +1027,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "da7caa55",
+   "id": "c7cdf60a",
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1051,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "02d285b6",
+   "id": "a896b66d",
    "metadata": {},
    "outputs": [
     {
@@ -1072,7 +1073,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "38cd7a6a",
+   "id": "4ee292fb",
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1093,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44662100",
+   "id": "b8a4fea5",
    "metadata": {},
    "source": [
     "#### delimiter도 필요할 경우 () 사용\n",
@@ -1102,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "4696b404",
+   "id": "e5a07aa3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1113,7 +1114,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "7bd3e04b",
+   "id": "74f9cf89",
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1135,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "e802281b",
+   "id": "651244ef",
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +1156,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "116986ba",
+   "id": "d9ac558b",
    "metadata": {},
    "outputs": [
     {
@@ -1176,7 +1177,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "eb8fd6a8",
+   "id": "c23b1820",
    "metadata": {},
    "outputs": [
     {
@@ -1196,7 +1197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae93c8bc",
+   "id": "5dc12217",
    "metadata": {},
    "source": [
     "### Search and Replace"
@@ -1205,7 +1206,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "139938dc",
+   "id": "8fde3ed2",
    "metadata": {},
    "outputs": [
     {
@@ -1227,7 +1228,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "790ad0bd",
+   "id": "2fe83ab9",
    "metadata": {},
    "outputs": [
     {
@@ -1248,7 +1249,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "704953e8",
+   "id": "76102e73",
    "metadata": {},
    "outputs": [
     {
@@ -1271,7 +1272,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "06f95763",
+   "id": "abd9fd18",
    "metadata": {},
    "outputs": [
     {
@@ -1292,7 +1293,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "86f16d80",
+   "id": "6b50a942",
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac1000fd",
+   "id": "1c177bfd",
    "metadata": {},
    "source": [
     "### match() versus search()\n",
@@ -1323,7 +1324,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "7b8f48cb",
+   "id": "a6cb61b2",
    "metadata": {},
    "outputs": [
     {
@@ -1343,7 +1344,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "46d6b563",
+   "id": "de2fdf2c",
    "metadata": {},
    "outputs": [
     {
@@ -1362,7 +1363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d41c01e6",
+   "id": "7c14866b",
    "metadata": {},
    "source": [
     "### Greedy versus Non-Greedy"
@@ -1371,7 +1372,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "a872fc78",
+   "id": "72ca3d40",
    "metadata": {},
    "outputs": [
     {
@@ -1393,7 +1394,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "839a172a",
+   "id": "4c863608",
    "metadata": {},
    "outputs": [
     {
@@ -1410,7 +1411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edf365ad",
+   "id": "a9f0eb3a",
    "metadata": {},
    "source": [
     "In this case, the solution is to use the non-greedy qualifiers *?, +?, ??, or {m,n}?, which match as little text as possible. "
@@ -1419,7 +1420,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "9ea50443",
+   "id": "834c0a5d",
    "metadata": {},
    "outputs": [
     {
@@ -1437,7 +1438,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "a5e00ad7",
+   "id": "6abbd1b8",
    "metadata": {},
    "outputs": [
     {
@@ -1454,7 +1455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b6e8cd3",
+   "id": "0d5a8404",
    "metadata": {},
    "source": [
     "### Using re.VERBOSE\n",
@@ -1464,7 +1465,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "f70ce1b3",
+   "id": "8c888ef7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1480,7 +1481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0326cdec",
+   "id": "f02bfcfe",
    "metadata": {},
    "source": [
     "This is far more readable than:"
@@ -1489,7 +1490,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "a3473f41",
+   "id": "e975b356",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1499,14 +1500,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2b27b3a",
+   "id": "e48ae3da",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "5d5f8547",
+   "id": "8fe57fa7",
    "metadata": {},
    "source": [
     "숫자만 가능 : /^[0-9]+$/\n",
@@ -1541,7 +1542,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "10c7a1bd",
+   "id": "b6c0868e",
    "metadata": {},
    "outputs": [
     {
@@ -1632,7 +1633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32902a11",
+   "id": "823375e9",
    "metadata": {},
    "outputs": [],
    "source": []
