--- a/regular expression/regular expression 정리본.ipynb
+++ b/regular expression/regular expression 정리본.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 1,
    "id": "9ef55445",
    "metadata": {},
    "outputs": [],
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 2,
    "id": "0f2a4cb9",
    "metadata": {},
    "outputs": [
@@ -1215,7 +1215,7 @@
        "'colour socks and colour shoes'"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 3,
    "id": "862f9d45",
    "metadata": {},
    "outputs": [
@@ -1237,13 +1237,23 @@
        "'colour socks and red shoes'"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "p.sub('colour', 'blue socks and red shoes', count=1)"
+    "p.sub('colour', 'blue socks and red shoes', count=1) # 1개 만 바꿈"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "understood-incidence",
+   "metadata": {},
+   "source": [
+    "#### string.replace or re.sub \n",
+    "As long as you can make do with str.replace(), you should use it. <br>\n",
+    "str.replace() should be used whenever it's possible to. It's more explicit, simpler, and faster."
    ]
   },
   {
