--- a/regular expression/regular expression 정리본.ipynb
+++ b/regular expression/regular expression 정리본.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "9ef55445",
    "metadata": {},
    "outputs": [],
@@ -1244,6 +1244,42 @@
    ],
    "source": [
     "p.sub('colour', 'blue socks and red shoes', count=1) # 1개 만 바꿈"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "metric-seafood",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\ndef cleanup_spelling(text):\\n    replacements = [\\n        ['-', ', '], ['/ ', ', '], ['/', ', '], ['\\\\(', ', '], [' and', ', '], [' &', ', '], ['\\\\)', ''],\\n        ['Dom Rep|DR|Domin Rep|Dominican Rep,|Domincan Republic', 'Dominican Republic'],\\n        ['Mad,|Mad$', 'Madagascar, '],\\n        ['Ecu,|Ecu$|Ecuad,|Ecuad$', 'Ecuador, '],\\n        ['Nic,|Nic$', 'Nicaragua, '], # metacharacter $ used.\\n        ['Haw,|Haw$', 'Hawaii, '],\\n        [', $', ''], [',  ', ', '], [', ,', ', '], ['\\xa0', ' '],[',\\\\s+', ','],\\n        [' Bali', ',Bali']\\n    ]\\n    for i, j in replacements:\\n        text = re.sub(i, j, text)\\n    return text\\n\\ndf['sample'] = df['sample'].str.replace('abc', 'bbb').apply(cleanup_spelling)\\n\""
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#### 일괄 치환 방법\n",
+    "\"\"\" 형식만 참조\n",
+    "def cleanup_spelling(text):\n",
+    "    replacements = [\n",
+    "        ['Dom Rep|DR|Domin Rep|Dominican Rep,|Domincan Republic', 'Dominican Republic'],\n",
+    "        ['Mad,|Mad$', 'Madagascar, '],\n",
+    "        ['Ecu,|Ecu$|Ecuad,|Ecuad$', 'Ecuador, '],\n",
+    "        ['Nic,|Nic$', 'Nicaragua, '], # metacharacter $ used.\n",
+    "        ['-', ', '], ['/ ', ', '], [', $', ''], [',  ', ', '], ['\\xa0', ' '],[',\\s+', ','],\n",
+    "    ]\n",
+    "    for i, j in replacements:\n",
+    "        text = re.sub(i, j, text)\n",
+    "    return text\n",
+    "\n",
+    "df['sample'] = df['sample'].str.replace('abc', 'bbb').apply(cleanup_spelling)\n",
+    "\"\"\""
    ]
   },
   {
