backslash sub 추가

--- a/regular expression/regular expression 정리본.ipynb
+++ b/regular expression/regular expression 정리본.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "9ef55445",
    "metadata": {},
    "outputs": [],
@@ -1244,6 +1244,29 @@
    ],
    "source": [
     "p.sub('colour', 'blue socks and red shoes', count=1) # 1개 만 바꿈"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b1c3dd38",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'sam*sun*g'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "backs = re.sub(r'[\\\\.]', '*', 'sam.sun\\\\g') \n",
+    "# backslash 변환 => \\\\ : metacharacter \\와 변환대상 \\  이어서 표현\n",
+    "backs"
    ]
   },
   {
