--- a/python/asterisk 사용 zip, def.ipynb
+++ b/python/asterisk 사용 zip, def.ipynb
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "074baae3",
+   "id": "c17737eb",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4d44a733",
+   "id": "a97af62b",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1c80c45a",
+   "id": "3f2438ee",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f390ab83",
+   "id": "beeb8116",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3fcd6318",
+   "id": "dd2c224c",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "aa76e419",
+   "id": "51d0a7f0",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "dd8b07d0",
+   "id": "375721f1",
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b9346697",
+   "id": "648ec9ed",
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e9b873e7",
+   "id": "acbbdfa7",
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4f6891f",
+   "id": "63dca106",
    "metadata": {},
    "source": [
     "이상 출처 https://mingrammer.com/understanding-the-asterisk-of-python/"
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "cf51d334",
+   "id": "82f7c47a",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "75becbb2",
+   "id": "dd606d8f",
    "metadata": {},
    "outputs": [
     {
@@ -387,8 +387,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "id": "0e82a2de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "([1, 2, 3],)\n",
+      "([4, 5, 6],)\n",
+      "([7, 8, 9],)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in zip(alist):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
-   "id": "6155e02b",
+   "id": "256650b9",
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e614ed39",
+   "id": "9e2cd3b7",
    "metadata": {},
    "outputs": [
     {
@@ -428,6 +449,35 @@
     "    \n",
     "# 이상 출처: https://juhee-maeng.tistory.com/entry/Python내장함수-zip함수와-args-kwargs-란 [simPLE]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ad9a40b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 4, 7)\n",
+      "(2, 5, 8)\n",
+      "(3, 6, 9)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in zip(*alist):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "737bdeb1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
