--- a/numpy/np.hstack, vstack, concatenate, column_stack.ipynb
+++ b/numpy/np.hstack, vstack, concatenate, column_stack.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "883d8205",
+   "id": "e713e5a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64b70fb6",
+   "id": "6138cf60",
    "metadata": {},
    "source": [
     "### np.hstack(<span style='color:red'>(</span>a,b<span style='color:red'>)</span>),  np.c_<span style='color:red'>[</span>a,b<span style='color:red'>]</span> \n",
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ab24cf1a",
+   "id": "a739565d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b1fc0275",
+   "id": "b7c2f08d",
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e679d42b",
+   "id": "307d493c",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4010d42e",
+   "id": "f88042f5",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "91918d1f",
+   "id": "6995e953",
    "metadata": {
     "scrolled": true
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd90d153",
+   "id": "8bd8682c",
    "metadata": {},
    "source": [
     "### np.vstack(<span style='color:red'>(</span>a,b<span style='color:red'>)</span>),  np.r_<span style='color:red'>[</span>a,b<span style='color:red'>]</span> \n",
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "64ba5377",
+   "id": "8f1fd1ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a2db6178",
+   "id": "012be391",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7fef6d48",
+   "id": "af98c6f4",
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2f66d42a",
+   "id": "83b33f47",
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "bc600745",
+   "id": "a5f13b77",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3cfc6489",
+   "id": "d39cdc17",
    "metadata": {
     "scrolled": false
    },
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08a0c317",
+   "id": "1075e33d",
    "metadata": {},
    "source": [
     "### np.concatinate(<span style='color:red'>(</span>a,b<span style='color:red'>)</span>, axis=(<span style='color:red'>0</span>) : 아래쪽으로 붙이기\n",
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7841648e",
+   "id": "55793fdc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e74db788",
+   "id": "fbc117c2",
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "39f28127",
+   "id": "4a667ecf",
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "2f240668",
+   "id": "e62c4392",
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "c1febc9d",
+   "id": "15bcb8ef",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "bdc7890f",
+   "id": "0ea7dd10",
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "15db04fb",
+   "id": "32a8d075",
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9492cca8",
+   "id": "dfc9ff2c",
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ade0eee4",
+   "id": "00095fe2",
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a0e3f7c",
+   "id": "507e3b01",
    "metadata": {},
    "source": [
     "### np.column_stack(<span style='color:red'>(</span>a,b<span style='color:red'>)</span>)\n",
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "303086fa",
+   "id": "9d6b8f8c",
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "9aa9a941",
+   "id": "a56aa1de",
    "metadata": {},
    "outputs": [
     {
@@ -543,18 +543,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "a21734f6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aa = np.array([[1, 2], [3, 4], [5, 6]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "49f8473f",
+   "execution_count": 35,
+   "id": "b0793a0e",
    "metadata": {},
    "outputs": [
     {
@@ -565,19 +555,19 @@
        "       [5, 6]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "aa"
+    "np.array([[1, 2], [3, 4], [5, 6]])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "8c82caa1",
+   "id": "29311404",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "71ff07f6",
+   "id": "d93bce52",
    "metadata": {},
    "outputs": [
     {
@@ -618,6 +608,104 @@
    ],
    "source": [
     "np.c_[a,b,aa]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4da40c1a",
+   "metadata": {},
+   "source": [
+    "### np.row_stack(<span style='color:red'>(</span>a,b<span style='color:red'>)</span>)\n",
+    "row 벡터 오른쪽으로 이어가기\n",
+    "== np.r_[a, b] .shape변환후 사용해야 함."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "5bc22f30",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([1, 2, 3]), array([4, 5, 6]))"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([1,2,3])\n",
+    "b = np.array([4,5,6])\n",
+    "a, b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "7e923123",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.row_stack((a,b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "efc68e1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5, 6])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.r_[a,b] # 원하는 결과가 아닌 횡으로 합쳐짐."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "b90d3197",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.r_[a.reshape(1,3),b.reshape(1,3)] #shape 변환후 사용해야 함."
    ]
   }
  ],
