--- a/numpy/np.hstack, vstack, concatenate, column_stack.ipynb
+++ b/numpy/np.hstack, vstack, concatenate, column_stack.ipynb
@@ -543,30 +543,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "id": "b0793a0e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 2],\n",
-       "       [3, 4],\n",
-       "       [5, 6]])"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.array([[1, 2], [3, 4], [5, 6]])"
+    "aa = np.array([[1, 2], [3, 4], [5, 6]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "29311404",
    "metadata": {},
    "outputs": [
@@ -578,7 +565,7 @@
        "       [3, 6, 5, 6]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "d93bce52",
    "metadata": {},
    "outputs": [
@@ -601,7 +588,7 @@
        "       [3, 6, 5, 6]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "5bc22f30",
    "metadata": {},
    "outputs": [
@@ -632,7 +619,7 @@
        "(array([1, 2, 3]), array([4, 5, 6]))"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "7e923123",
    "metadata": {},
    "outputs": [
@@ -656,7 +643,7 @@
        "       [4, 5, 6]])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "id": "efc68e1d",
    "metadata": {},
    "outputs": [
@@ -677,7 +664,7 @@
        "array([1, 2, 3, 4, 5, 6])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "id": "b90d3197",
    "metadata": {},
    "outputs": [
@@ -699,7 +686,7 @@
        "       [4, 5, 6]])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
