--- a/eda-plot/wine_quality.ipynb
+++ b/eda-plot/wine_quality.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "29873f78",
       "metadata": {
         "id": "29873f78"
@@ -34,12 +34,12 @@
         "id": "LoPx40jQadXY"
       },
       "id": "LoPx40jQadXY",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "290be255",
       "metadata": {
         "id": "290be255",
@@ -278,7 +278,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "098c4dfd",
       "metadata": {
         "id": "098c4dfd",
@@ -320,7 +320,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "528d96c8",
       "metadata": {
         "id": "528d96c8"
@@ -352,7 +352,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "8191c1d0",
       "metadata": {
         "id": "8191c1d0"
@@ -378,7 +378,7 @@
         "outputId": "7f44bb99-1007-4e1d-9aec-389df28ed01e"
       },
       "id": "sgDfoq-Cf3lp",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -397,7 +397,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "1fd5e497",
       "metadata": {
         "id": "1fd5e497",
@@ -438,7 +438,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "b8da0e08",
       "metadata": {
         "id": "b8da0e08",
@@ -470,7 +470,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "50db328a",
       "metadata": {
         "id": "50db328a",
@@ -502,7 +502,7 @@
         "    plt.figure(figsize=(12,12))\n",
         "    for i in range(1, length+1):\n",
         "        plt.subplot(num_v,num_h,i)\n",
-        "        sns.histplot(wine_df.iloc[:,i-1])\n",
+        "        sns.histplot(df.iloc[:,i-1])\n",
         "    plt.tight_layout()\n",
         "    plt.show()\n",
         "    \n",
@@ -511,7 +511,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "1ecafcca",
       "metadata": {
         "id": "1ecafcca",
@@ -557,7 +557,7 @@
         "id": "E9k86jIN30rO"
       },
       "id": "E9k86jIN30rO",
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -578,7 +578,7 @@
         }
       },
       "id": "kM_WfLvd3ZBo",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -818,7 +818,7 @@
         }
       },
       "id": "ev3rWHT_4XVY",
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
