--- a/eda-plot/wine_quality.ipynb
+++ b/eda-plot/wine_quality.ipynb
@@ -499,7 +499,7 @@
         "    num_h = 4\n",
         "    length = len(df.columns)\n",
         "    num_v = int(length / 4 + 0.5)\n",
-        "    plt.figure(figsize=(12,12))\n",
+        "    plt.figure(figsize=(3*num_h,3*num_v))\n",
         "    for i in range(1, length+1):\n",
         "        plt.subplot(num_v,num_h,i)\n",
         "        sns.histplot(df.iloc[:,i-1])\n",
