--- a/machine learning/Custom_Transformer_in_Scikit_learn.ipynb
+++ b/machine learning/Custom_Transformer_in_Scikit_learn.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "Scikit-Learn은 덕 타이핑duck typing을 지원하므로 fit(), transform(), fit_transform() 메서드를 구현한 파이썬 클래스를 만들면 됩니다. 여기에서 덕 타이핑이란 상속이나 인터페이스 구현이 아니라 객체의 속성이나 메서드가 객체의 유형을 결정하는 방식입니다. \n",
-    "- BaseEstimator를 상속하면 하이퍼파라미터 튜닝에 필요한 두 메서드 get_params()와 set_params()를 얻게 됩니다. 이때 생성자에 \\*args나 \\*\\*kargs를 사용하지 않아야 합니다.\n",
+    "- BaseEstimator를 상속하면 하이퍼파라미터 튜닝에 필요한 두 메서드 get_params()와 set_params()를 얻게 됩니다. cross_val_score, gridsearchcv 등을 만들때도 사용. 이때 생성자에 \\*args나 \\*\\*kargs를 사용하지 않아야 합니다.\n",
     "- 마지막의 fit_transform()은 TransformerMixin으로 구현이 되어 있고 이를 상속하면 자동으로 생성됩니다"
    ]
   },
