--- a/eda-plot/concrete_eda.ipynb
+++ b/eda-plot/concrete_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a36bf7b0",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "id": "3ab7aa00",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "id": "0a22147d",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
        "4                                         44.296075  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 4,
    "id": "1cf416c1",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 5,
    "id": "d9fcfe71",
    "metadata": {},
    "outputs": [],
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 6,
    "id": "94e8ff6a",
    "metadata": {},
    "outputs": [],
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 7,
    "id": "569dc276",
    "metadata": {},
    "outputs": [
@@ -382,7 +382,7 @@
        "4          825.5  360                    44.296075  "
       ]
      },
-     "execution_count": 81,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,9 +392,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d43c7374",
+   "metadata": {},
+   "source": [
+    "First encountering a new dataset can sometimes feel overwhelming. You might be presented with hundreds or thousands of features without even a description to go by. Where do you even begin?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "aaa31183",
+   "execution_count": 8,
+   "id": "4a403d24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,16 +411,24 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "\n",
-    "plt.style.use(\"seaborn-whitegrid\")\n",
-    "\n",
+    "plt.style.use(\"seaborn-whitegrid\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1dc80e45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "url_auto = 'https://raw.githubusercontent.com/fasthill/My-gist/main/data/Automobile_data.csv'\n",
     "df = pd.read_csv(url_auto)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "59bb21de",
+   "execution_count": 10,
+   "id": "14103532",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +633,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,8 +644,367 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "0c432417",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# number인 column을 숫자열로 변환\n",
+    "for colname in df.select_dtypes('object').columns:\n",
+    "    if df[colname].str.contains(r'\\d+.?\\d*[^a-zA-Z]').any(): # 숫자(.숫자)이면서 문자로 이어지지 않는 형식\n",
+    "        df[colname] = pd.to_numeric(df[colname], errors='coerce').astype('float')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f1562416",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df.copy()\n",
+    "y = X.pop('price')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2bbae21a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Label encoding for categoricals\n",
+    "for colname in X.select_dtypes(\"object\"):\n",
+    "    X[colname], _ = X[colname].factorize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a3821a05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>symboling</th>\n",
+       "      <th>normalized-losses</th>\n",
+       "      <th>make</th>\n",
+       "      <th>fuel-type</th>\n",
+       "      <th>aspiration</th>\n",
+       "      <th>num-of-doors</th>\n",
+       "      <th>body-style</th>\n",
+       "      <th>drive-wheels</th>\n",
+       "      <th>engine-location</th>\n",
+       "      <th>wheel-base</th>\n",
+       "      <th>...</th>\n",
+       "      <th>num-of-cylinders</th>\n",
+       "      <th>engine-size</th>\n",
+       "      <th>fuel-system</th>\n",
+       "      <th>bore</th>\n",
+       "      <th>stroke</th>\n",
+       "      <th>compression-ratio</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>peak-rpm</th>\n",
+       "      <th>city-mpg</th>\n",
+       "      <th>highway-mpg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>88.6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>130</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.47</td>\n",
+       "      <td>2.68</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>111.0</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>21</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>88.6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>130</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.47</td>\n",
+       "      <td>2.68</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>111.0</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>21</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>94.5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>152</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.68</td>\n",
+       "      <td>3.47</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>154.0</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>19</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>164.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>99.8</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>109</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.19</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>5500.0</td>\n",
+       "      <td>24</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>164.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>99.4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>136</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.19</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>115.0</td>\n",
+       "      <td>5500.0</td>\n",
+       "      <td>18</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   symboling  normalized-losses  make  fuel-type  aspiration  num-of-doors  \\\n",
+       "0          3                NaN     0          0           0             0   \n",
+       "1          3                NaN     0          0           0             0   \n",
+       "2          1                NaN     0          0           0             0   \n",
+       "3          2              164.0     1          0           0             1   \n",
+       "4          2              164.0     1          0           0             1   \n",
+       "\n",
+       "   body-style  drive-wheels  engine-location  wheel-base  ...  \\\n",
+       "0           0             0                0        88.6  ...   \n",
+       "1           0             0                0        88.6  ...   \n",
+       "2           1             0                0        94.5  ...   \n",
+       "3           2             1                0        99.8  ...   \n",
+       "4           2             2                0        99.4  ...   \n",
+       "\n",
+       "   num-of-cylinders  engine-size  fuel-system  bore  stroke  \\\n",
+       "0                 0          130            0  3.47    2.68   \n",
+       "1                 0          130            0  3.47    2.68   \n",
+       "2                 1          152            0  2.68    3.47   \n",
+       "3                 0          109            0  3.19    3.40   \n",
+       "4                 2          136            0  3.19    3.40   \n",
+       "\n",
+       "   compression-ratio  horsepower  peak-rpm  city-mpg  highway-mpg  \n",
+       "0                9.0       111.0    5000.0        21           27  \n",
+       "1                9.0       111.0    5000.0        21           27  \n",
+       "2                9.0       154.0    5000.0        19           26  \n",
+       "3               10.0       102.0    5500.0        24           30  \n",
+       "4                8.0       115.0    5500.0        18           22  \n",
+       "\n",
+       "[5 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "dfc7435d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 205 entries, 0 to 204\n",
+      "Data columns (total 25 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   symboling          205 non-null    int64  \n",
+      " 1   normalized-losses  164 non-null    float64\n",
+      " 2   make               205 non-null    int64  \n",
+      " 3   fuel-type          205 non-null    int64  \n",
+      " 4   aspiration         205 non-null    int64  \n",
+      " 5   num-of-doors       205 non-null    int64  \n",
+      " 6   body-style         205 non-null    int64  \n",
+      " 7   drive-wheels       205 non-null    int64  \n",
+      " 8   engine-location    205 non-null    int64  \n",
+      " 9   wheel-base         205 non-null    float64\n",
+      " 10  length             205 non-null    float64\n",
+      " 11  width              205 non-null    float64\n",
+      " 12  height             205 non-null    float64\n",
+      " 13  curb-weight        205 non-null    int64  \n",
+      " 14  engine-type        205 non-null    int64  \n",
+      " 15  num-of-cylinders   205 non-null    int64  \n",
+      " 16  engine-size        205 non-null    int64  \n",
+      " 17  fuel-system        205 non-null    int64  \n",
+      " 18  bore               201 non-null    float64\n",
+      " 19  stroke             201 non-null    float64\n",
+      " 20  compression-ratio  205 non-null    float64\n",
+      " 21  horsepower         203 non-null    float64\n",
+      " 22  peak-rpm           203 non-null    float64\n",
+      " 23  city-mpg           205 non-null    int64  \n",
+      " 24  highway-mpg        205 non-null    int64  \n",
+      "dtypes: float64(10), int64(15)\n",
+      "memory usage: 40.2 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "X.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c9f328f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# All discrete features should now have integer dtypes (double-check this before using MI!)\n",
+    "discrete_features = X.dtypes == 'int64'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "d397080a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "symboling             True\n",
+       "normalized-losses    False\n",
+       "make                  True\n",
+       "fuel-type             True\n",
+       "aspiration            True\n",
+       "num-of-doors          True\n",
+       "body-style            True\n",
+       "drive-wheels          True\n",
+       "engine-location       True\n",
+       "wheel-base           False\n",
+       "length               False\n",
+       "width                False\n",
+       "height               False\n",
+       "curb-weight           True\n",
+       "engine-type           True\n",
+       "num-of-cylinders      True\n",
+       "engine-size           True\n",
+       "fuel-system           True\n",
+       "bore                 False\n",
+       "stroke               False\n",
+       "compression-ratio    False\n",
+       "horsepower           False\n",
+       "peak-rpm             False\n",
+       "city-mpg              True\n",
+       "highway-mpg           True\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "discrete_features"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e53e410d",
+   "id": "12eeb2aa",
    "metadata": {},
    "outputs": [],
    "source": []
