--- a/regular expression/regular_expression_summary.ipynb
+++ b/regular expression/regular_expression_summary.ipynb
@@ -46,33 +46,51 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50993abc",
-   "metadata": {
-    "id": "50993abc"
-   },
+   "id": "professional-sheriff",
+   "metadata": {},
    "source": [
+    "<ul>\n",
+    "    <li><code>\\</code> escape special characters</li>\n",
+    "    <li><code>.</code> matches any character</li>\n",
+    "    <li><code>^</code> matches beginning of string</li>\n",
+    "    <li><code>$</code> matches end of string</li>\n",
+    "    <li><code>[5b-d]</code> matches any chars '5', 'b', 'c' or 'd'</li>\n",
+    "    <li><code>[^a-c6]</code> matches any char except 'a', 'b', 'c' or '6'</li>\n",
+    "    <li><code>R|S</code> matches either regex R or regex S</li>\n",
+    "    <li><code>()</code> creates a capture group and indicates precedence</li>\n",
+    "</ul>\n",
+    "<ul>\n",
+    "    <li><code>*</code> 0 or more (append ? for non-greedy)</li>\n",
+    "    <li><code>+</code> 1 or more (append ? for non-greedy)</li>\n",
+    "    <li><code>?</code> 0 or 1 (append ? for non-greedy)</li>\n",
+    "    <li><code>{m}</code> exactly mm occurrences</li>\n",
+    "    <li><code>{m, n}</code>  from m to n. m defaults to 0, n to infinity</li>\n",
+    "    <li><code>{m, n}?</code> from m to n, as few as possible</li>\n",
+    "</ul>\n",
+    "<ul>\n",
+    "    <li><code>\\A</code> start of string</li>\n",
+    "    <li>\n",
+    "    <code>\\b</code> matches empty string at word boundary\n",
+    "    (between <code>\\w</code> and <code>\\W</code>)\n",
+    "    </li>\n",
+    "    <li><code>\\B</code> matches empty string not at word boundary</li>\n",
+    "    <li><code>\\d</code> digit<code>[0-9]</code></li>\n",
+    "    <li><code>\\D</code> non-digit<code>[^0-9]</code></li>\n",
+    "    <li><code>\\s</code> whitespace: <code>[ \\t\\n\\r\\f\\v]</code></li>\n",
+    "    <li><code>\\S</code> non-whitespace<code>[^ \\t\\n\\r\\f\\v]</code></li>\n",
+    "    <li><code>\\w</code> alphanumeric: <code>[0-9a-zA-Z_]</code></li>\n",
+    "    <li><code>\\W</code> non-alphanumeric<code>[^0-9a-zA-Z_]</code></li>\n",
+    "    <li><code>\\Z</code> end of string</li>\n",
+    "    <li><code>\\g&lt;id&gt;</code> matches a previously defined group</li>\n",
+    "</ul>  \n",
+    "<ul> \n",
+    "    <li>[\\s,.] is a character class that will match any whitespace character, or ',' or '.'.</li>\n",
+    "    <li>[ ] 안에서는 특수 문자 역할을 하지 못함</li>\n",
+    "    <li>[^5] -> will match any character except '5'. [5^] will match either a '5' or a '^'.</li>\n",
+    "</ul>\n",
+    "\n",
     "#### metacharacter (Need to be escaped) :\n",
     ". ^ $ * + ? { } [ ] \\ | ( ) <br>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "45938e72",
-   "metadata": {
-    "id": "45938e72"
-   },
-   "source": [
-    "[ ] 안에서는 특수 문자 역할을 하지 못함"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4f7e9f86",
-   "metadata": {
-    "id": "4f7e9f86"
-   },
-   "source": [
-    "[^5] -> will match any character except '5'. [5^] will match either a '5' or a '^'."
    ]
   },
   {
@@ -245,36 +263,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c80370d",
-   "metadata": {
-    "id": "8c80370d"
-   },
-   "source": [
-    "\\d is equivalent to the class [0-9].\n",
-    "\n",
-    "\\D is equivalent to the class [^0-9].\n",
-    "\n",
-    "\\s is equivalent to the class [ \\t\\n\\r\\f\\v].\n",
-    "\n",
-    "\\S is equivalent to the class [^ \\t\\n\\r\\f\\v].\n",
-    "\n",
-    "\\w is equivalent to the class [a-zA-Z0-9_].\n",
-    "\n",
-    "\\W is equivalent to the class [^a-zA-Z0-9_]."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7967026b",
-   "metadata": {
-    "id": "7967026b"
-   },
-   "source": [
-    "[\\s,.] is a character class that will match any whitespace character, or ',' or '.'."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "5GlIGH7m_6LT",
    "metadata": {
     "id": "5GlIGH7m_6LT"
@@ -374,16 +362,6 @@
     "    print(pattern.match(sl))\n",
     "  else:\n",
     "    print('None')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "photographic-strap",
-   "metadata": {
-    "id": "photographic-strap"
-   },
-   "source": [
-    "![snippet.JPG](attachment:snippet.JPG)"
    ]
   },
   {
@@ -1911,16 +1889,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "distinct-diabetes",
-   "metadata": {
-    "id": "distinct-diabetes"
-   },
-   "source": [
-    "![sublist.JPG](attachment:sublist.JPG)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "understood-incidence",
    "metadata": {
     "id": "understood-incidence"
@@ -2506,7 +2474,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
