modify some expression

--- a/regular_expression/regular_expression_summary.ipynb
+++ b/regular_expression/regular_expression_summary.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "professional-sheriff",
+   "id": "seeing-senegal",
    "metadata": {},
    "source": [
     "<ul>\n",
@@ -262,26 +262,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "5GlIGH7m_6LT",
-   "metadata": {
-    "id": "5GlIGH7m_6LT"
-   },
-   "source": [
-    "```\n",
-    "아래 예제 pattern 설명\n",
-    "정수 확인하기\n",
-    "^는 문자열의 시작.\n",
-    "\\-? 이 숫자가 음수이거나 양수일 수 있음을 나타냄.\n",
-    "[1-9]는 숫자의 첫 번째 자리표시. 1에서 9 사이의 숫자 여야하며 0이 아니어야 함. 0으로 시작하지 않는 숫자\n",
-    "[0-9]*는 다음 숫자를 나타냄. 자릿수는 0을 포함하여 임의 일 수 있음.\n",
-    "$는 문자열의 끝 표시.\n",
-    "```"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 81,
    "id": "Z-fAlJTsAUXh",
    "metadata": {
     "colab": {
@@ -305,6 +287,15 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "정수 확인하기\n",
+    "^는 문자열의 시작.\n",
+    "\\-? 이 숫자가 음수이거나 양수일 수 있음을 나타냄.\n",
+    "[1-9]는 숫자의 첫 번째 자리표시. 1에서 9 사이의 숫자 여야하며 0이 아니어야 함. 0으로 시작하지 않는 숫자\n",
+    "[0-9]*는 다음 숫자를 나타냄. 자릿수는 0을 포함하여 임의 일 수 있음.\n",
+    "$는 문자열의 끝 표시.\n",
+    "\"\"\"\n",
+    "\n",
     "pattern = re.compile(r'^\\-?[1-9][0-9]*$') # 0으로 시작하지 않는 정수\n",
     "int_num = [ 0, 0., 10, 10.1, -20, -20.1]\n",
     "for num in int_num:\n",
@@ -315,24 +306,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "00QxPxlgD-J5",
-   "metadata": {
-    "id": "00QxPxlgD-J5"
-   },
-   "source": [
-    "```\n",
-    "아래 예제 pattern 설명\n",
-    "(\\d+)? : 숫자가 한개 이상 있는 묶음(\\d+)이 있거나 없거나(?)\n",
-    ".? : 소숫점이 있거나 없거나,\n",
-    "\\d* : 숫자가 없거나 많이 있거나,\n",
-    "[^a-zA-Z] : 이후에는 영문자로 시작하지 않는 문자열\n",
-    "```"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 82,
    "id": "B-2knT_yClZp",
    "metadata": {
     "colab": {
@@ -355,6 +330,14 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "아래 예제 pattern 설명\n",
+    "(\\d+)? : 숫자가 한개 이상 있는 묶음(\\d+)이 있거나 없거나(?)\n",
+    ".? : 소숫점이 있거나 없거나,\n",
+    "\\d* : 숫자가 없거나 많이 있거나,\n",
+    "[^a-zA-Z] : 이후에는 영문자로 시작하지 않는 문자열\n",
+    "\"\"\"\n",
+    "\n",
     "pattern = re.compile(r'(\\d+)?.?\\d*[^a-zA-Z]') # 숫자(.숫자)이면서 문자로 이어지지 않는 형식\n",
     "str_list = ['1num', '123', '345,23', 'num1', '2.3str']\n",
     "for sl in str_list:\n",
@@ -386,7 +369,7 @@
    "source": [
     "### Python’s raw string notation for regular expressions\n",
     "backslashes are not handled in any special way in a string literal prefixed with 'r', so r\"\\n\" is a two-character string containing '\\' and 'n', while \"\\n\" is a one-character string containing a newline. Regular expressions will often be written in Python code using this raw string notation.\n",
-    "#### <span style='color:red'> r'\\n' == '\\\\' + 'n' while '\\n' == one character string </span>"
+    "### <span style='color:red'> r'\\n' == '\\\\' + 'n'</span>, &nbsp; while <span style='color:red'>'\\n' == one character string </span>"
    ]
   },
   {
@@ -427,7 +410,7 @@
     "\n",
     "</table>\n",
     "\n",
-    "match() and search() return <span style='color:red'>None</span> if no match can be found. "
+    "### **match() and search() return <span style='color:red'>None</span> if no match can be found.**"
    ]
   },
   {
@@ -1894,7 +1877,8 @@
     "id": "understood-incidence"
    },
    "source": [
-    "#### string.replace or re.sub \n",
+    "### string.replace or re.sub \n",
+    "<font color='re둘 중에 string.replace를 사용해야 함.\n",
     "As long as you can make do with str.replace(), you should use it. <br>\n",
     "str.replace() should be used whenever it's possible to. It's more explicit, simpler, and faster."
    ]
