--- a/web_scrapy/02_BeautifulSoup_web_crawling_간단정리.ipynb
+++ b/web_scrapy/02_BeautifulSoup_web_crawling_간단정리.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "r = requests.get('https://google.com')\n",
     "html = r.text\n",
-    "print(html)"
+    "# print(html)"
    ]
   },
   {
@@ -63,7 +63,7 @@
     "r = requests.get('https://google.com')\n",
     "html = r.content \n",
     "#웹페이지의 content를 유니코드 형태가 아니라 bytes 형태로 얻기 위해서는 r.text가 아닌 r.content를 사용.\n",
-    "print(html)"
+    "# print(html)"
    ]
   },
   {
@@ -159,7 +159,7 @@
     "html = r.content\n",
     "soup = BeautifulSoup(html, 'html.parser')\n",
     "\n",
-    "print(soup.head.prettify()) # print(soup.prettify())"
+    "# print(soup.head.prettify()) # print(soup.prettify())"
    ]
   },
   {
@@ -388,7 +388,7 @@
     }
    ],
    "source": [
-    "print(soup.body.prettify()) # body 부분만 프린트"
+    "# print(soup.body.prettify()) # body 부분만 프린트"
    ]
   },
   {
@@ -23451,7 +23451,7 @@
    ],
    "source": [
     "soup = BeautifulSoup(req.text,\"html.parser\")\n",
-    "print(soup.prettify())"
+    "# print(soup.prettify())"
    ]
   },
   {
