--- a/web_scrapy/handle_iframe_datepicker.ipynb
+++ b/web_scrapy/handle_iframe_datepicker.ipynb
@@ -92,6 +92,7 @@
    "source": [
     "#switch to frame\n",
     "l = driver.find_element(By.XPATH, \"//iframe[@class='demo-frame']\")\n",
+    "#switch to frame\n",
     "driver.switch_to.frame(l);"
    ]
   },
