--- a/web_scrapy/01_BeautifulSoup기본사용.ipynb
+++ b/web_scrapy/01_BeautifulSoup기본사용.ipynb
@@ -312,8 +312,84 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "5084fe06",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['body', 'strikeout']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "css_soup = BeautifulSoup('<p class=\"body strikeout  \">example text</p>')\n",
+    "css_soup.p['class']  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "5f88cf3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 이렇게 하면 class와 같은 attrs 표시릏 할때 space는 '.'를 사용하는 방법을 찾을 수 있음\n",
+    "# 예: 위의 경우 아래와 같이 표현되므로 \"body.strikeout\"로만 사용하면 됨. 위의 마지막 strikeout 뒤부분의 space는 신경쓰지 않아도 됨.\n",
+    "# [\"body\", \"strikeout\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "5bf81111",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'example text'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "css_soup.select('p.body.strikeout')[0].get_text()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "46673f02",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'example text'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "css_soup.find('p', 'body strikeout').get_text()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "cee8e877",
+   "id": "f598f867",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -321,7 +397,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -335,7 +411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
